--- a/app/snitchy_spine/css/application.styl
+++ b/app/snitchy_spine/css/application.styl
@@ -19,7 +19,7 @@ body {
 .monitor {
   width: 658px;
   height: 449px;
-  background-image: url('monitor.png');
+  background-image: url('/monitor.png');
   position: absolute;
 }
 
@@ -75,7 +75,7 @@ nav a {
 }
 
 #progress {
-  background-image: url('SnitchyLoading.gif');
+  background-image: url('/SnitchyLoading.gif');
   background-size: cover;
   width: 100%;
   height: 100%;
