Added HGJB font

--- a/app/snitchy_spine/css/application.styl
+++ b/app/snitchy_spine/css/application.styl
@@ -84,9 +84,15 @@ nav a {
   font-size: 150px;
 }
 
+@font-face {
+  font-family: hgjb;
+  src: url('/fonts/hgjb.woff');
+}
+
 #progress #text {
   margin-top: 82px;
   display: inline-block;
+  font-family: hgjb, helvetica neue;
 }
 
 .bold {
