--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -67,9 +67,14 @@ nav a {
   text-align: center;
   font-size: 150px;
 }
+@font-face {
+  font-family: hgjb;
+  src: url("/fonts/hgjb.woff");
+}
 #progress #text {
   margin-top: 82px;
   display: inline-block;
+  font-family: hgjb, helvetica neue;
 }
 .bold {
   font-weight: 700;
