--- a/app/snitchy_spine/public/application.css
+++ b/app/snitchy_spine/public/application.css
@@ -1,11 +1,10 @@
 body {
   font-family: helvetica neue;
 }
-
 a.btn {
   text-decoration: none;
-  color: white;
-  background: #00FCFE;
+  color: #fff;
+  background: #00fcfe;
   font-size: 57px;
   font-weight: 700;
   -webkit-border-radius: 10px;
@@ -14,129 +13,104 @@ a.btn {
   padding: 10px;
   display: block;
 }
-
 a.btn:hover {
-  background: #FF00AD;
+  background: #ff00ad;
 }
-
 .screen {
   display: none;
   width: 100%;
   height: 100%;
 }
-
 .screen.active {
   display: block;
 }
-
 #white_noise {
-  background: black;
+  background: #000;
 }
-
 .monitor {
   width: 658px;
   height: 449px;
-  background-image: url('/monitor.png');
+  background-image: url("/monitor.png");
   position: absolute;
   top: 50%;
   margin-top: -225px;
   left: 50%;
   margin-left: -329px;
 }
-
 .monitor_screen {
   width: 609px;
   height: 344px;
   margin-left: 25px;
   margin-top: 6px;
 }
-
 .white_noise_controller img {
   width: 100%;
   height: 100%;
 }
-
 .thumb {
   height: 50px;
 }
-
 #snitchy_link {
   font-size: 11px;
   margin-right: 100px;
 }
-
-#about_link, #feedback_link {
+#about_link,
+#feedback_link {
   font-size: 9.5px;
   color: #0c0c0d;
 }
-
 nav {
   position: relative;
   top: 380px;
   left: 305px;
 }
-
 nav a {
-  color: white;
+  color: #fff;
   text-decoration: none;
 }
-
 .pink {
-  color: #ff00ff;
+  color: #f0f;
 }
-
 .light_blue {
   color: #00fcff;
 }
-
 .grey {
   color: #b5b5b5;
 }
-
 .grey-2 {
   color: #9a9a9a;
 }
-
 .dark-grey {
   color: #9a9a9a;
 }
-
 #progress {
-  background-image: url('/SnitchyLoading.gif');
+  background-image: url("/SnitchyLoading.gif");
   background-size: cover;
   width: 100%;
   height: 100%;
-  color: white;
+  color: #fff;
   text-align: center;
   font-size: 150px;
 }
-
 @font-face {
   font-family: hgjb;
-  src: url('/fonts/hgjb.woff');
+  src: url("/fonts/hgjb.woff");
 }
-
 #progress #text {
   margin-top: 82px;
   display: inline-block;
   font-family: hgjb, helvetica neue;
 }
-
 .bold {
   font-weight: 700;
 }
-
 #player {
   margin-left: -3000px;
   position: absolute;
 }
-
 .show_snitch_controller img {
   width: 100%;
 }
-
 .show_snitch_controller {
   overflow: hidden;
 }
-
-
