--- a/app/snitchy_spine/css/application.styl
+++ b/app/snitchy_spine/css/application.styl
@@ -62,18 +62,19 @@ a.btn:hover {
 
 #snitchy_link {
   font-size: 11px;
-  margin-right: 100px;
+  margin-right: 209px;
 }
 
 #about_link, #feedback_link {
   font-size: 9.5px;
   color: #0c0c0d;
+  margin-right: 10px;
 }
 
 nav {
   position: relative;
-  top: 380px;
-  left: 305px;
+  top: 377px;
+  left: 313px;
 }
 
 nav a {
@@ -139,4 +140,12 @@ nav a {
   overflow: hidden;
 }
 
-
+#start {
+  margin-left: auto;
+  margin-right: auto;
+  width: 460px;
+  margin-top: 139px;
+  padding-left: 15px;
+  padding-right: 15px;
+  line-height: 64px;
+}
