--- a/app/snitchy_spine/css/application.styl
+++ b/app/snitchy_spine/css/application.styl
@@ -57,7 +57,7 @@ a.btn:hover {
 }
 
 .thumb {
-  height: 50px;
+  height: 47px;
 }
 
 #snitchy_link {
@@ -109,7 +109,6 @@ nav a {
   height: 100%;
   color: white;
   text-align: center;
-  font-size: 150px;
 }
 
 @font-face {
@@ -118,9 +117,10 @@ nav a {
 }
 
 #progress #text {
-  margin-top: 82px;
+  margin-top: 70px;
   display: inline-block;
   font-family: hgjb, helvetica neue;
+  font-size: 189px;
 }
 
 .bold {
@@ -148,4 +148,40 @@ nav a {
   padding-left: 15px;
   padding-right: 15px;
   line-height: 64px;
+}
+
+.header {
+  text-align: center;
+  color: #00fcff;
+  font-size: 57px;
+  font-weight: 700;
+  margin-top: 24px;
+  margin-bottom: -8px;
+}
+
+.sub-header {
+  text-align: center;
+  font-size: 22px;
+}
+
+#build_snitch_next {
+  text-align: center;
+  margin-top: 37px;
+  line-height: 62px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 345px;
+}
+
+#slides {
+  margin-top: 34px;
+  min-height: 53px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.slide-container {
+  float: left;
+  width: 47px;
+  overflow: hidden;
 }
