--- a/app/snitchy_spine/css/application.styl
+++ b/app/snitchy_spine/css/application.styl
@@ -121,6 +121,8 @@ nav a {
   display: inline-block;
   font-family: hgjb, helvetica neue;
   font-size: 189px;
+  margin-left: 55px;
+  text-align: center;
 }
 
 .bold {
@@ -133,11 +135,13 @@ nav a {
 }
 
 .show_snitch_controller img {
-  width: 100%;
+  height: 342px;
 }
 
 .show_snitch_controller {
   overflow: hidden;
+  text-align: center;
+  padding: 2px 0px;
 }
 
 #start {
@@ -164,7 +168,7 @@ nav a {
   font-size: 22px;
 }
 
-#build_snitch_next {
+.next {
   text-align: center;
   margin-top: 37px;
   line-height: 62px;
@@ -178,10 +182,49 @@ nav a {
   min-height: 53px;
   padding-left: 30px;
   padding-right: 30px;
+  text-align: center;
 }
 
 .slide-container {
-  float: left;
   width: 47px;
   overflow: hidden;
+  margin-right: 8px;
+  display: inline-block;
+}
+
+#youtube_input {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 411px;
+  font-family: helvetica neue;
+  font-size: 33px;
+  color: white;
+  background: #A6A6A6;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  padding: 5px 15px;
+  margin-top: 47px;
+  text-align: center;
+  margin-bottom: 53px;
+  box-shadow: inset 1px #c9c9c9; /*TODO: Fix this*/
+}
+
+::-webkit-input-placeholder { /* WebKit browsers */
+  color:    #fff;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+  color:    #fff;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+  color:    #fff;
+}
+:-ms-input-placeholder { /* Internet Explorer 10+ */
+  color:    #fff;
+}
+
+#watch_it {
+  padding: 10px 75px;
+  margin-top: 138px;
 }
