Finished styling about screens

--- a/app/snitchy_spine/css/application.styl
+++ b/app/snitchy_spine/css/application.styl
@@ -228,3 +228,36 @@ nav a {
   padding: 10px 75px;
   margin-top: 138px;
 }
+
+#r {
+  display: inline-block;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+#about_header {
+  display: inline-block;
+  font-size: 56px;
+  font-weight: 700;
+}
+
+#about_sub_header {
+  color: #8C8C8C;
+  font-size: 29px;
+  font-weight: 500;
+  margin-top: -5px;
+  word-spacing: 2px;
+}
+
+.about-text {
+  font-size: 29px;
+  font-weight: 700;
+  width: 500px;
+  margin-top: 38px;
+  word-spacing: 2px;
+  line-height: 35px;
+}
+
+.about_controller {
+  padding: 28px 59px;
+}
