--- a/app/snitchy_spine/css/application.styl
+++ b/app/snitchy_spine/css/application.styl
@@ -261,3 +261,46 @@ nav a {
 .about_controller {
   padding: 28px 59px;
 }
+
+#your_email {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 411px;
+  font-family: helvetica neue;
+  font-size: 33px;
+  color: white;
+  background: #A6A6A6;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  padding: 5px 15px;
+  box-shadow: inset 1px #c9c9c9; /*TODO: Fix this*/
+  font-weight: 300;
+  margin-top: 43px;
+  letter-spacing: 1.25px;
+}
+
+#your_thoughts {
+  background: #888888;
+  margin-left: 82px;
+  margin-right: auto;
+  width: 411px;
+  font-family: helvetica neue;
+  font-size: 33px;
+  color: white;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  padding: 5px 15px;
+  box-shadow: inset 1px #c9c9c9; /*TODO: Fix this*/
+  box-shadow: inset 1px #c9c9c9; /*TODO: Fix this*/
+  height: 100px;
+  font-weight: 300;
+  letter-spacing: 1.25px;
+  margin-top: 11px;
+}
+
+.feedback_controller .next {
+  margin-top: 15px;
+}
